# CryptOracle

./: .gitignore  .gitmodules  ARTIFACT-EVALUATION.md  LICENSE  README.md  benchmark-main.py  requirements.txt
additive-model/: README.md  additive-model-estimation.py
ae-config/: flamegraph.yaml  matmul-perf-model-config.yaml  microbenchmarks.yaml  parameters.yaml  primitives.yaml
ae-scripts/: collect_figure_5_data.sh  collect_figure_7_data.sh  estimate_matmul_performance.sh  generate-ispass-plots.py  generate_figure_4_flamegraph.sh  generate_figure_5_plot.py  generate_figure_7_plot.py
in/: input_parameters.yaml  microbenchmarks.yaml  perf_events.yaml  primitives.yaml  workloads.yaml
ispass-plots/: generate_ispass_plots.py
perf-model/: README.md  perf-model.py
replacement-files/: CMakeLists.txt
replacement-files/CIFAR10/: cifar10.cc
replacement-files/LogisticFunction/: LogisticFunction.hpp  LogisticFunctionUsage.cc
replacement-files/MatrixMultiplication/: CMakeLists-MatrixMult.txt  MatrixMultiplication.hpp  MatrixMultiplicationUsage.cc
replacement-files/SignEvaluation/: SignEvaluation.hpp  SignEvaluationUsage.cc
replacement-files/chi_square_test/: demo-chi2.cpp
replacement-files/logistic_regression/: lr_nag.cpp  parameters.h
replacement-files/resnet/: FHEController.cpp  Utils.h  main.cpp
src/: CIFAR10ImageClassification  build.py  cli.py  environment.py  globals.py  logging_utils.py  microbenchmark_profiling.py  performance_utils.py  primitive_profiling.py  utils.py  workload_profiling.py
util/: parse_microbench_and_power.py  run_group.py
(+71 files in other folders)
